# hed-mcp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_real_files_corrected.py  test_schemas.py  test_server.py
docs/: hed_integration.md  installation.md  known_issues.md  usage.md
examples/: basic_usage.py  contrastChangeDetection_events.tsv  sample_events.tsv
examples/sanity_checks/: README.md  test_debug.py  test_hed_import.py  test_mcp_inspector.py  test_pipeline.py  test_production_server.py  test_production_simple.py  test_sidecar_generation.py  test_tools.py  test_wrapper.py
scripts/: run_sanity_checks.py
src/hed_tools/: __init__.py
src/hed_tools/hed_integration/: __init__.py  hed_wrapper.py  models.py  remodeling.py  schema.py  service_integration.py  tabular_summary.py  validation.py
src/hed_tools/pipeline/: __init__.py  config.py  core.py  performance.py
src/hed_tools/pipeline/stages/: __init__.py  column_classification.py  data_ingestion.py  hed_mapping.py  sidecar_generation.py  validation.py
src/hed_tools/server/: __init__.py  server.py
src/hed_tools/tools/: __init__.py  bids_parser.py  cli.py  column_analysis_engine.py  column_analyzer.py  enhanced_column_analyzer.py  llm_preprocessor.py  performance_optimizer.py
src/hed_tools/utils/: __init__.py  file_utils.py  security.py  validation_models.py
src/hedtools_integration/: __init__.py
src/hedtools_integration/hed_integration/: __init__.py
tests/: README.md  __init__.py  test_imports.py  test_schema_handler.py
tests/integration/: __init__.py  test_service_integration.py
tests/unit/: __init__.py  test_bids_parser.py  test_column_analysis_engine.py  test_enhanced_column_analyzer.py  test_llm_preprocessor.py  test_performance_optimizer.py  test_pipeline_task5_simple.py  test_remodeling.py  test_tabular_summary_wrapper.py  test_validation.py
tests/wip/: test_pipeline_task5.py
